--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 Нажимаю "glimmer cape"<br>
 Не поймаете лохи!<br>
 Да я сам для себя сейв, мне сапорты не нужны<br></p>
-<embed src="СЕРЕГА ПИРАТ  ТИЛЬТ.mp3" width="200" height="75" align="left" hidden="False" autostart="True" loop="True">
+<embed src="https://ruv.hotmo.org/song/66435301" width="200" height="75" align="left" hidden="False" autostart="True" loop="True">
 <script src = "app.js"></script>
 	</body>
 </html>
