--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="shortcut icon" href="https://yt3.ggpht.com/ytc/AAUvwnh3q92rhwlSUpGrsGTdMrC6ThFGA97NEuNgjqEU=s900-c-k-c0x00ffffff-no-rj">
+		<title>Лучшая соц.сеть!</title>
 		<style type="text/css"></style>
 		<link rel="stylesheet" href="style.css">
 		<meta charset="utf-8">
